--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="styles/style.css">
     <title>Treasure Ogundiran</title>
 </head>
 <body>
-    
+    <nav id="nav">
+        <h1><a href="/">Treasure Ogundiran</a></h1>
+        <ul id="main-menu">
+            <li><a class="active" href="/">Home</a></li>
+            <li><a href="/">Work</a></li>
+            <li><a href="/">Contact</a></li>
+        </ul>
+        <div id="dark-mode-toggle-div">
+            <button id="dark-mode-toggle" class="material-symbols-outlined">
+                dark_mode
+            </button>
+        </div>
+    </nav>
+    <footer id="footer">
+        <ul id="socials">
+            <li><a href=""><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-github fa-2x"></i></a></li>
+            <li><a href=""><i class="fa-sharp fa-solid fa-envelope fa-2x"></i></a></li>
+        </ul>
+    </footer>
+    <script src="https://kit.fontawesome.com/015614e963.js" crossorigin="anonymous"></script>
 </body>
 </html>
