--- a/contact/index.html
+++ b/contact/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Treasure Ogundiran</title>
 </head>
 <body>
     <nav id="nav">
         <h1><a href="/">Treasure Ogundiran</a></h1>
         <ul id="main-menu">
-            <li><a class="active" href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/work/">Work</a></li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a class="active" href="#">Contact</a></li>
         </ul>
         <div id="dark-mode-toggle-div">
             <button id="dark-mode-toggle" class="material-symbols-outlined">
