Added title text to home page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             </button>
         </div>
     </nav>
+    <section id="intro">
+        <p id="intro-heading">Hi, I'm <span id="intro-name">Treasure</span>. I build software.</p>
+        <p id="intro-subheading">
+            <a href="#about">
+                Learn More<i class="material-symbols-outlined">arrow_downward</i>
+            </a>
+        </p>
+    </section>
+    <section id="about">
+        <h2>About me</h2>
+    </section>
     <footer id="footer">
         <ul id="socials">
             <li><a target="_blank" href="https://www.linkedin.com/in/treasureogundiran/"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
